Add debug toggle with per-item debug metrics and roadmap balance tuning

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h1>Incremental Clicker</h1>
       <p class="balance-label">Balance</p>
       <p id="balance" class="balance">$0.00</p>
+      <button id="debug-toggle" class="debug-toggle" type="button" aria-pressed="false">Debug: OFF</button>
     </header>
 
     <p class="instructions">
